# archie-nextgen

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  REVIEW.md  pyproject.toml
plans/: 001-core-chat-loop.md  002-tool-framework.md  003-sandboxing.md  004-shell-tool.md  005-file-write-tool.md  006-ui-polish.md  007-session-logging.md  008-code-tool.md  009-brain-tool.md  010-memory-and-brain.md  011-context-efficiency.md  012-agent-loop-refactor.md  013-logging-caching-editor.md  014-review-findings.md  015-web-fetch-tool.md  016-debug-log-overhaul.md  017-tool-call-ui-compaction.md  018-ollama-provider.md  019-ui-layout-refresh.md  020-workspace-mount.md  021-web-search-tool.md  022-unified-theming.md  023-docstring-sweep.md  024-command-palette-refactor.md  025-read-tool.md  026-glob-tool.md  027-grep-tool.md  028-code-tool.md  029-agent-loop-improvements.md  030-code-intel-refactor.md  031-skills.md  ROADMAP.md
sandbox/: Dockerfile
src/archie/: __init__.py  agent.py  artifact_store.py  brain.py  cli.py  code_intel.py  config.py  debug.py  engine.py  llm.py  logs.py  memory.py  models.py  project.py  prompt.py  sandbox.py  session.py  soul.md  types.py  web.py
src/archie/llm/: __init__.py  bedrock.py  ollama.py
src/archie/tools/: __init__.py  brain.py  brain_tool.py  code.py  edit_file.py  glob.py  grep.py  list_files.py  read.py  read_file.py  recall.py  retrieve_artifact.py  search_files.py  self_debug.py  shell.py  ui_summary.py  web_fetch.py  web_search.py  write_file.py
tests/: test_agent.py  test_brain_cli.py  test_brain_tool.py  test_cli.py  test_code_intel.py  test_config.py  test_context_eviction.py  test_engine.py  test_llm.py  test_logs.py  test_memory.py  test_ollama.py  test_project.py  test_sandbox.py  test_self_debug.py  test_session.py  test_shell_tool.py  test_tool_brain.py  test_tool_code.py  test_tool_glob.py  test_tool_read.py  test_tool_recall.py  test_tool_registry.py  test_tool_shell.py  test_tool_write.py  test_tools.py  test_user_shell.py  test_web.py  test_web_fetch_tool.py  test_web_search_tool.py  test_write_tools.py
(+11 files in other folders)
