[project]
name = "archie"
version = "0.1.0"
description = "Personal AI agent harness"
readme = "README.md"
authors = [
    { name = "Simon Downes", email = "simon@simondownes.co.uk" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3>=1,<2",
    "click>=8,<9",
    "httpx>=0.27,<1",
    "ollama>=0.6.1",
    "python-ulid>=3.1.0",
    "trafilatura>=2,<3",
    "pyyaml>=6,<7",
    "textual>=8,<9",
    "ddgs>=9,<10",
    "tree-sitter>=0.25",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-hcl>=1.2.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
archie = "archie.cli:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
